--- a/Changes
+++ b/Changes
@@ -2,6 +2,12 @@ Revision history for CPAN-Meta-Requirements
 
 {{$NEXT}}
 
+    [Fixed]
+
+    - On Perls prior to v5.12, CPAN::Meta::Requirements will be installed
+      into the 'core' library path to avoid an older version bundled with
+      ExtUtils::MakeMaker and installed there taking precedence.
+
 2.122     2012-05-02 17:29:17 America/New_York
 
     [Fixed]
