--- a/Changes
+++ b/Changes
@@ -6,6 +6,10 @@ Revision history for CPAN-Meta-Requirements
 
     - Minor documentation fixes
 
+    [CHANGED]
+
+    - Modernized distribution meta files
+
 2.125     2013-09-23 14:51:14 America/New_York
 
     [FIXED]
