improve compatibility with old version.pm

--- a/Changes
+++ b/Changes
@@ -2,6 +2,10 @@ Revision history for CPAN-Meta-Requirements
 
 {{$NEXT}}
 
+    [FIXED]
+
+    - Fixed compatibility with version.pm 0.77
+
     [DOCUMENTED]
 
     - Minor documentation fixes
