--- a/Changes
+++ b/Changes
@@ -2,6 +2,19 @@ Revision history for CPAN-Meta-Requirements
 
 {{$NEXT}}
 
+    [ADDED]
+
+    - from_string_hash can take optional constructor arguments
+
+    [CHANGED]
+
+    - bad_version_hook callback gets module name as well as version string
+
+    - undefined/empty versions given to from_string_hash or
+      add_string_requirement now carp and are coerced to "0" instead of
+      being fatal.  This is more consistent with how the other requirement
+      functions work.
+
 2.129     2014-11-13 16:28:45-05:00 America/New_York
 
     [FIXED]
