preserve precision of prereq of 0.00
If a version object was created with a value of "0.00" we don't
shortcut that a version object of value "0".

Fixes #18

--- a/Changes
+++ b/Changes
@@ -2,6 +2,11 @@ Revision history for CPAN-Meta-Requirements
 
 {{$NEXT}}
 
+    [FIXED]
+
+    - Precision of version requirement "0.00" is preserved when merging
+      requirements.
+
 2.131     2014-12-23 15:04:19-05:00 America/New_York
 
     [ENHANCEMENTS]
