--- a/Changes
+++ b/Changes
@@ -7,6 +7,9 @@ Revision history for CPAN-Meta-Requirements
     - On Perls before 5.8.1, pad 1-part and 2-part literal v-strings
       to avoid old version.pm bugs with v-strings less than 3 characters
 
+    - Protect internal _isa_version from non-refs that pass
+      ->isa('version')
+
 2.135     2015-05-19 13:15:35-04:00 America/New_York (TRIAL RELEASE)
 
     [TESTING]
