--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ Revision history for CPAN-Meta-Requirements
 
 {{$NEXT}}
 
+    - no changes from 2.139
+
 2.139     2015-12-11 12:42:44-05:00 America/New_York (TRIAL RELEASE)
 
     - expanded dist.ini from author bundle to individual plugins
