--- a/Changes
+++ b/Changes
@@ -4,6 +4,8 @@ Revision history for CPAN-Meta-Requirements
 
 2.141     2023-04-30 15:42:35+02:00 Europe/Paris (TRIAL RELEASE)
     - confess() replaced with croak(): fewer stack traces
+    - broke the version range handling into the Range class (thanks, Leon
+      Timmermans!)
 
 2.140     2015-12-12 16:17:15-05:00 America/New_York
 
