--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for CPAN-Meta-Requirements
 
 {{$NEXT}}
+    - Fix regression with implicit minimum value and multiple requirements
 
 2.142     2023-05-09 07:15:05-04:00 America/New_York
     - no changes since previous trial releae
